--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Wenyu Yang - Full Stack Developer Portfolio">
     <meta name="author" content="Wenyu Yang">
     <title>Wenyu Yang - Portfolio</title>
-    <link rel="icon" href="./images/icon.png">
+    <link rel="icon" href="../images/icon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/project1/public.css">
+    <link rel="stylesheet" href="../public.css">
   </head>
 
   <body>
@@ -75,6 +75,10 @@
               <a href="https://github.com/Jocelynmie" class="text-decoration-none">
                 <i class="bi bi-github fs-4"></i>
               </a>
+              <a href="mailto:jocelynmiemie@gmail.com" class="text-decoration-none">
+                <i class="bi bi-envelope fs-4"></i>
+              </a>
+
             </div>
           </div>
         </div>
@@ -98,24 +102,9 @@
         </div>
       </div>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      document.getElementById("contactForm").addEventListener("submit", function (e) {
-        e.preventDefault();
-        const alert = document.createElement("div");
-        alert.className = "alert alert-success alert-dismissible fade show mt-3";
-        alert.innerHTML = `
-          Message sent successfully!
-          <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-        `;
-        this.appendChild(alert);
-        this.reset();
-        setTimeout(() => {
-          alert.remove();
-        }, 3000);
-      });
-    </script>
+    <script src="../js/main.js"></script>
+
   </body>
 
 </html>
