--- a/pages/experience.html
+++ b/pages/experience.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Wenyu Yang - Full Stack Developer Portfolio">
     <meta name="author" content="Wenyu Yang">
     <title>Wenyu Yang - Portfolio</title>
-    <link rel="icon" href="/images/icon.png">
+    <link rel="icon" href="../images/icon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/public.css">
+    <link rel="stylesheet" href="../public.css">
   </head>
 
   <body>
@@ -52,7 +52,7 @@
           </div>
           <div class="col-lg-6">
             <div class="text-center">
-              <img src="/images/WechatIMG420.jpeg" alt="Profile Image" class="img-fluid rounded-3 shadow" style="max-width: 200px">
+              <img src="../images/WechatIMG420.jpeg" alt="Profile Image" class="img-fluid rounded-3 shadow" style="max-width: 200px">
             </div>
           </div>
         </div>
@@ -72,9 +72,12 @@
                   <h5 class="card-title fw-bold">Mobile App Development Intern</h5>
                   <h6 class="card-subtitle mb-2 text-muted">Xinjiang Bank</h6>
                   <p class="small text-muted">Sep. 2024 - Dec. 2024</p>
-                  <p class="card-text">
-                    Developed iOS banking application and administrative dashboard with React
-                  </p>
+                  <p class="card-text">Developed and enhanced an iOS banking application using Swift 5 and SwiftUI, implementing secure transaction interfaces
+                    and optimizing performance by 15% while ensuring PCI DSS compliance.</p>
+                  <p class="card-text">Built internal administrative dashboard using React 18 and TypeScript, featuring role-based access control and audit logging
+                    that improved transaction monitoring efficiency by 20%.</p>
+                  <p class="card-text">Integrated core banking APIs and security features including OAuth 2.0, SSL certificate pinning, and biometric authenti-
+                    cation, maintaining 75% test coverage.</p>
                 </div>
               </div>
             </div>
@@ -85,9 +88,13 @@
                   <h5 class="card-title fw-bold">Full Stack Software Engineer Intern</h5>
                   <h6 class="card-subtitle mb-2 text-muted">Bank of Huihe</h6>
                   <p class="small text-muted">Dec. 2023 - Mar. 2024</p>
-                  <p class="card-text">
-                    Developed track spending feature and contributed to official website development
-                  </p>
+                  <p class="card-text">Assisted in the development of a track spending feature using Spring Boot backend and HTML/CSS with React frontend,
+                    providing 100K+ users a dynamic platform to plan schedules and monitor expenses, increasing user daily activity by 28%</p>
+                  <p class="card-text">Contributed to the development of the official website using Java and Spring Cloud, focusing on service discovery and
+                    configuration management, which resulted in delivering up-to-date information and increasing customer satisfaction by
+                    31% in February 2024.</p>
+                  <p class="card-text">Developed and implemented scalable software solutions using Java, Spring Boot, and React, following agile methodologies
+                    and CI/CD practices.</p>
                 </div>
               </div>
             </div>
