--- a/pages/index.html
+++ b/pages/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Wenyu Yang - Full Stack Developer Portfolio">
     <meta name="author" content="Wenyu Yang">
     <title>Wenyu Yang - Portfolio</title>
-    <link rel="icon" href="/images/icon.png">
+    <link rel="icon" href="../images/icon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/public.css">
+    <link rel="stylesheet" href="../public.css">
   </head>
 
   <body>
@@ -40,15 +40,16 @@
     <!-- Hero Section -->
     <section class="py-5 bg-light" style="margin-top: 56px">
       <div class="container px-5 position-relative">
-        <!-- Profile Image -->
-        <div style="position: absolute; top: 0; right: 50px">
-          <img src="/images/WechatIMG420.jpeg" alt="Profile Image" class="img-fluid rounded-3 shadow" style="max-width: 300px">
-        </div>
+
+
+
 
         <div class="row gx-5 align-items-center">
           <div class="col-lg-8">
             <div class="text-lg-start">
               <h1 class="display-4 fw-bold mb-3">Full Stack Developer</h1>
+
+
 
               <!--Tech skills-->
               <div class="row g-4">
@@ -88,16 +89,22 @@
                   </div>
                 </div>
               </div>
-
               <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-lg-start mt-4">
                 <a href="./contact.html" class="btn btn-primary btn-lg px-4 me-sm-3">Contact Me</a>
                 <a href="./projects.html" class="btn btn-outline-primary btn-lg px-4">View Projects</a>
               </div>
             </div>
           </div>
+          <!-- Profile Image -->
+
+
+          <div class="col-4">
+            <img src="../images/WechatIMG420.jpeg" alt="Profile Image" class="img-fluid rounded-3 shadow" style="max-width: 300px">
+          </div>
         </div>
       </div>
     </section>
+
 
     <!--Hobbies-->
     <section class="py-5">
@@ -106,7 +113,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
           <div class="col">
             <div class="card h-100">
-              <img src="/images/hobby1.png" class="card-img-top" alt="Guzheng" style="height: 300px">
+              <img src="../images/hobby1.png" class="card-img-top" alt="Guzheng" style="height: 300px">
               <div class="card-body">
                 <h5 class="card-title">Guzheng</h5>
                 <p class="card-text">
@@ -117,7 +124,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="/images/hobby2.jpg" class="card-img-top" alt="Photography" style="height: 300px">
+              <img src="../images/hobby2.jpg" class="card-img-top" alt="Photography" style="height: 300px">
               <div class="card-body">
                 <h5 class="card-title">Photography</h5>
                 <p class="card-text">
@@ -128,7 +135,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="/images/hobby3.jpg" class="card-img-top" alt="Poodle" style="height: 300px">
+              <img src="../images/hobby3.jpg" class="card-img-top" alt="Poodle" style="height: 300px">
               <div class="card-body">
                 <h5 class="card-title">My 12-Year-Old Poodle</h5>
                 <p class="card-text">
@@ -139,7 +146,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="/images/hobby4.jpg" class="card-img-top" alt="Chinese Cuisine and Baking" style="height: 300px">
+              <img src="../images/hobby4.jpg" class="card-img-top" alt="Chinese Cuisine and Baking" style="height: 300px">
               <div class="card-body">
                 <h5 class="card-title">Chinese Cuisine and Baking</h5>
                 <p class="card-text">
