--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Wenyu Yang - Full Stack Developer Portfolio">
     <meta name="author" content="Wenyu Yang">
     <title>Wenyu Yang - Portfolio</title>
-    <link rel="icon" href="/images/icon.png">
+    <link rel="icon" href="../images/icon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/public.css">
+    <link rel="stylesheet" href="../public.css">
   </head>
 
   <body>
@@ -52,7 +52,7 @@
           </div>
           <div class="col-lg-6">
             <div class="text-center">
-              <img src="/images/WechatIMG420.jpeg" alt="Profile Image" class="img-fluid rounded-3 shadow" style="max-width: 200px">
+              <img src="../images/WechatIMG420.jpeg" alt="Profile Image" class="img-fluid rounded-3 shadow" style="max-width: 200px">
             </div>
           </div>
         </div>
@@ -69,9 +69,13 @@
             <div class="card h-100 project-card shadow-sm">
               <div class="card-body">
                 <h5 class="card-title fw-bold">E-Commerce Microservice Application</h5>
-                <p class="card-text text-muted">
-                  Full-stack e-commerce platform built with MERN stack and microservices architecture
-                </p>
+                <div class="card-text">
+                  <ul>Independently designed and developed an e-commerce application using the MERN stack and microservices architecture,
+                    integrating Stripe.js for secure payments.</ul>
+                  <ul>Implemented CRUD operations using Node.js and MongoDB, and incorporated JWT authentication for enhanced security.</ul>
+                  <ul>Created an intuitive, responsive UI using React and ensured cross-platform compatibility with Flutter.</ul>
+                </div>
+
                 <div class="mb-3">
                   <span class="skill-badge">React</span>
                   <span class="skill-badge">Node.js</span>
@@ -79,7 +83,7 @@
                   <span class="skill-badge">Express</span>
                   <span class="skill-badge">Stripe.js</span>
                 </div>
-                <a href="#" class="btn btn-outline-primary">
+                <a href="https://github.com/Jocelynmie/MERN_workout" class="btn btn-outline-primary">
                   <i class="bi bi-github me-2"></i>View Project
                 </a>
               </div>
@@ -89,10 +93,14 @@
           <div class="col-lg-6">
             <div class="card h-100 project-card shadow-sm">
               <div class="card-body">
-                <h5 class="card-title fw-bold">Instant Booking System</h5>
-                <p class="card-text text-muted">
-                  Robust reservation platform with real-time features and secure payment processing
-                </p>
+                <h5 class="card-title fw-bold">Currency Converter iOS App</h5>
+                <div class="card-text">
+                  <ul>Engineered a themed currency converter using SwiftUI framework with MVVM architecture, implementing real-time bidi-
+                    rectional conversion.</ul>
+                  <ul>Developed modular UI components with custom animations and gesture recognizers, utilizing SwiftUI’s built-in primitives.</ul>
+                  <ul>Designed type-safe currency system using Swift enums with computed properties for robust data handling.</ul>
+                </div>
+
                 <div class="mb-3">
                   <span class="skill-badge">Next.js</span>
                   <span class="skill-badge">TypeScript</span>
@@ -100,7 +108,7 @@
                   <span class="skill-badge">PostgreSQL</span>
                   <span class="skill-badge">AWS</span>
                 </div>
-                <a href="#" class="btn btn-outline-primary">
+                <a href="https://github.com/Jocelynmie/LOTRConverter17" class="btn btn-outline-primary">
                   <i class="bi bi-github me-2"></i>View Project
                 </a>
               </div>
