--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="../images/icon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../public.css">
+    <link rel="stylesheet" href="/css/public.css">
   </head>
 
   <body>
