--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Wenyu Yang - Full Stack Developer Portfolio">
     <meta name="author" content="Wenyu Yang">
     <title>Wenyu Yang - Portfolio</title>
-    <link rel="icon" href="../images/icon.png">
+    <link rel="icon" href="./images/icon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../public.css">
+    <link rel="stylesheet" href="./css/public.css">
   </head>
 
   <body>
@@ -98,8 +98,8 @@
           <!-- Profile Image -->
 
 
-          <div class="col-4">
-            <img src="../images/WechatIMG420.jpeg" alt="Profile Image" class="img-fluid rounded-3 shadow" style="max-width: 300px">
+          <div class="col-4 mt-2">
+            <img src="./images/WechatIMG420.jpeg" alt="Profile Image" class="img-fluid rounded-3 shadow" style="max-width: 300px">
           </div>
         </div>
       </div>
@@ -113,7 +113,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
           <div class="col">
             <div class="card h-100">
-              <img src="../images/hobby1.png" class="card-img-top" alt="Guzheng" style="height: 300px">
+              <img src="./images/hobby1.png" class="card-img-top" alt="Guzheng" style="height: 300px">
               <div class="card-body">
                 <h5 class="card-title">Guzheng</h5>
                 <p class="card-text">
@@ -124,7 +124,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="../images/hobby2.jpg" class="card-img-top" alt="Photography" style="height: 300px">
+              <img src="./images/hobby2.jpg" class="card-img-top" alt="Photography" style="height: 300px">
               <div class="card-body">
                 <h5 class="card-title">Photography</h5>
                 <p class="card-text">
@@ -135,7 +135,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="../images/hobby3.jpg" class="card-img-top" alt="Poodle" style="height: 300px">
+              <img src="./images/hobby3.jpg" class="card-img-top" alt="Poodle" style="height: 300px">
               <div class="card-body">
                 <h5 class="card-title">My 12-Year-Old Poodle</h5>
                 <p class="card-text">
@@ -146,7 +146,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="../images/hobby4.jpg" class="card-img-top" alt="Chinese Cuisine and Baking" style="height: 300px">
+              <img src="./images/hobby4.jpg" class="card-img-top" alt="Chinese Cuisine and Baking" style="height: 300px">
               <div class="card-body">
                 <h5 class="card-title">Chinese Cuisine and Baking</h5>
                 <p class="card-text">
