--- a/projects.html
+++ b/projects.html
@@ -70,10 +70,13 @@
               <div class="card-body">
                 <h5 class="card-title fw-bold">E-Commerce Microservice Application</h5>
                 <div class="card-text">
-                  <ul>Independently designed and developed an e-commerce application using the MERN stack and microservices architecture,
-                    integrating Stripe.js for secure payments.</ul>
-                  <ul>Implemented CRUD operations using Node.js and MongoDB, and incorporated JWT authentication for enhanced security.</ul>
-                  <ul>Created an intuitive, responsive UI using React and ensured cross-platform compatibility with Flutter.</ul>
+                  Copy<div class="card-text">
+                    <ul>
+                      <li>Independently designed and developed an e-commerce application using the MERN stack and microservices architecture, integrating Stripe.js for secure payments.</li>
+                      <li>Implemented CRUD operations using Node.js and MongoDB, and incorporated JWT authentication for enhanced security.</li>
+                      <li>Created an intuitive, responsive UI using React and ensured cross-platform compatibility with Flutter.</li>
+                    </ul>
+                  </div>
                 </div>
 
                 <div class="mb-3">
@@ -95,10 +98,13 @@
               <div class="card-body">
                 <h5 class="card-title fw-bold">Currency Converter iOS App</h5>
                 <div class="card-text">
-                  <ul>Engineered a themed currency converter using SwiftUI framework with MVVM architecture, implementing real-time bidi-
-                    rectional conversion.</ul>
-                  <ul>Developed modular UI components with custom animations and gesture recognizers, utilizing SwiftUI’s built-in primitives.</ul>
-                  <ul>Designed type-safe currency system using Swift enums with computed properties for robust data handling.</ul>
+                  <div class="card-text">
+                    <ul>
+                      <li>Engineered a themed currency converter using SwiftUI framework with MVVM architecture, implementing real-time bidi-rectional conversion.</li>
+                      <li>Developed modular UI components with custom animations and gesture recognizers, utilizing SwiftUI's built-in primitives.</li>
+                      <li>Designed type-safe currency system using Swift enums with computed properties for robust data handling.</li>
+                    </ul>
+                  </div>
                 </div>
 
                 <div class="mb-3">
