--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
               <div class="card-body">
                 <h5 class="card-title fw-bold">E-Commerce Microservice Application</h5>
                 <div class="card-text">
-                  Copy<div class="card-text">
+                  <div class="card-text">
                     <ul>
                       <li>Independently designed and developed an e-commerce application using the MERN stack and microservices architecture, integrating Stripe.js for secure payments.</li>
                       <li>Implemented CRUD operations using Node.js and MongoDB, and incorporated JWT authentication for enhanced security.</li>
